# pbr_demo

./: CMakeLists.txt  README.md
res/models/bath/: TexturesCom_Cardboard_WavyLayer_512_albedo_red.tiff  TexturesCom_Cardboard_WavyLayer_512_roughness.tif  TexturesCom_Fabric_Muslin_512_albedo_blue.tiff  TexturesCom_Fabric_Muslin_512_albedo_red.tiff  TexturesCom_Fabric_Muslin_512_alpha.tif  TexturesCom_Fabric_Muslin_512_roughness.tif  TexturesCom_Ground_PineNeedles_2x2_512_albedo_darker.tiff  TexturesCom_Ground_PineNeedles_2x2_512_roughness.tif  TexturesCom_Ground_RockBed4_512_albedo.tif  TexturesCom_Ground_RockBed4_512_height.tif  TexturesCom_Ground_RockBed4_512_normal.tif  TexturesCom_WoodSiding4_1x1_512_roughness.tiff  bath.blend  bath.blend1  bath.dae  bath.mtl
res/shaders/: pbr.frag  pbr.frag.in  pbr_transparent.frag  pbr_transparent.frag.in  shadow_map.vert  shadow_map_animated.vert  skybox.frag  standard.frag  standard.frag.in  standard.vert  standard_animated.vert  standard_animated.vert.in  stylized.frag  stylized.frag.in  stylized_transparent.frag  stylized_water.frag  water.frag
res/textures/skybox/night/: readme.txt
src/config/: config.h.in
src/graphics/: camera.h  imgui_renderer.cpp  imgui_renderer.h  render_pass.h  renderer.cpp  renderer.h  ubo.h  vulkan_application.cpp  vulkan_application.h
src/graphics/geometry/: asset_manager.h  model.cpp  model.h  model_manager.cpp  model_manager.h  texture_manager.cpp
src/input/: input.h
src/main/: application.cpp  application.h  main.cpp
src/memory/: allocator.h  container_allocator.cpp  container_allocator.h  memory_util.cpp  memory_util.h  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
